[gd_scene load_steps=7 format=2]

[ext_resource path="res://day_2/submarine.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/enchantmentinstumental_sonartuning.mp3" type="AudioStream" id=2]
[ext_resource path="res://day_2/AudioStreamPlayer.gd" type="Script" id=3]
[ext_resource path="res://day_2/Grid.tscn" type="PackedScene" id=4]
[ext_resource path="res://day_2/day_2.gd" type="Script" id=5]

[sub_resource type="Environment" id=1]
background_energy = 0.0

[node name="day_2" type="Node2D"]
script = ExtResource( 5 )

[node name="Grid" parent="." instance=ExtResource( 4 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Submarine" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
script = ExtResource( 3 )

[connection signal="move_down" from="." to="Submarine" method="_on_day_2_move_down"]
[connection signal="move_forward" from="." to="Submarine" method="_on_day_2_move_forward"]
[connection signal="move_up" from="." to="Submarine" method="_on_day_2_move_up"]
